[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://level_select/level_select.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 0.5
anchor_bottom = 0.5
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 144.0
margin_top = 120.0
margin_right = 255.0
margin_bottom = 180.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 111.0
margin_bottom = 16.0
text = "Select a level to play"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 111.0
margin_bottom = 20.0

[node name="LevelButtonGrid" type="GridContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 55.0
margin_right = 55.0
columns = 4

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 111.0
margin_bottom = 60.0

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2"]
rect_min_size = Vector2( 64, 0 )
mouse_default_cursor_shape = 2
text = "Back"
